@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Wed Sep 27 12:46:53 CEST 2006
+// Thu Sep 28 17:54:43 CEST 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -39,7 +39,7 @@ namespace Mono.Cecil.Cil {
 	public sealed class InstructionCollection : CollectionBase, ICodeVisitable {
 
 		MethodBody m_container;
-		public readonly Instruction Outside = new Instruction (-1, OpCodes.Nop);
+		public readonly Instruction Outside = new Instruction (int.MaxValue, OpCodes.Nop);
 
 		public Instruction this [int index] {
 			get { return List [index] as Instruction; }
