@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Wed Sep 27 01:22:48 CEST 2006
+// Thu Sep 28 17:54:19 CEST 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -62,6 +62,7 @@ namespace Mono.Cecil {
 			List.Add (value);
 		}
 
+
 		public new void Clear ()
 		{
 			foreach (MethodDefinition item in this)
@@ -96,6 +97,7 @@ namespace Mono.Cecil {
 			List.Remove (value);
 		}
 
+
 		public new void RemoveAt (int index)
 		{
 			Detach (this [index]);
@@ -109,7 +111,7 @@ namespace Mono.Cecil {
 				throw new ArgumentException ("Must be of type " + typeof (MethodDefinition).FullName);
 		}
 
-		internal MethodDefinition GetConstructor (bool isStatic, IList parameters)
+		internal MethodDefinition GetConstructorInternal (bool isStatic, IList parameters)
 		{
 			foreach (MethodDefinition ctor in this) {
 				if (ctor.IsStatic != isStatic || ctor.Parameters.Count != parameters.Count)
@@ -143,17 +145,17 @@ namespace Mono.Cecil {
 
 		public MethodDefinition GetConstructor (bool isStatic, Type [] parameters)
 		{
-			return GetConstructor (isStatic, parameters);
+			return GetConstructorInternal (isStatic, parameters);
 		}
 
 		public MethodDefinition GetConstructor (bool isStatic, TypeReference [] parameters)
 		{
-			return GetConstructor (isStatic, parameters);
+			return GetConstructorInternal (isStatic, parameters);
 		}
 
 		public MethodDefinition GetConstructor (bool isStatic, ParameterDefinitionCollection parameters)
 		{
-			return GetConstructor (isStatic, parameters);
+			return GetConstructorInternal (isStatic, parameters);
 		}
 
 		void Attach (MemberReference member)
